RESOLVED FIXED322118
[JSC][Wasm] Reserved wasm: and wasm-js: names should LinkError in ESM
https://bugs.webkit.org/show_bug.cgi?id=322118
Summary [JSC][Wasm] Reserved wasm: and wasm-js: names should LinkError in ESM
Sergey Rubanov
Reported 2026-08-19 11:53:07 PDT
Importing or exporting a reserved wasm: or wasm-js: name currently fails with TypeError (invalid URL / import failed). The ESM integration spec wants WebAssembly.LinkError.
Attachments
Radar WebKit Bug Importer
Comment 1 2026-08-26 11:54:11 PDT
Sergey Rubanov
Comment 2 2026-08-28 09:04:23 PDT
EWS
Comment 3 2026-08-28 09:58:39 PDT
Committed 320059@main (6f7bb45088c8): <https://commits.webkit.org/320059@main> Reviewed commits have been landed. Closing PR #71955 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.