[JSC][Wasm] Reserved wasm: and wasm-js: names should LinkError in ESM https://bugs.webkit.org/show_bug.cgi?id=322118

Reviewed by Keith Miller.

ESM import of a Wasm module should reject reserved wasm: and wasm-js:
import names, export names, and wasm-js: module names with
WebAssembly.LinkError instead of TypeError or a successful load.
WebAssembly.Instance is unchanged. Enabled wasm: builtins are not
treated as reserved.

* Source/JavaScriptCore/wasm/js/JSWebAssemblyInstance.cpp:
* JSTests/wasm/modules/js-wasm-reserved-names.js: Added.
* JSTests/wasm/modules/reserved-import-name.wat: Added.
* JSTests/wasm/modules/reserved-import-name.wasm: Added.
* JSTests/wasm/modules/reserved-import-name-wasm-js.wat: Added.
* JSTests/wasm/modules/reserved-import-name-wasm-js.wasm: Added.
* JSTests/wasm/modules/reserved-export-name.wat: Added.
* JSTests/wasm/modules/reserved-export-name.wasm: Added.
* JSTests/wasm/modules/reserved-export-name-wasm-js.wat: Added.
* JSTests/wasm/modules/reserved-export-name-wasm-js.wasm: Added.
* JSTests/wasm/modules/reserved-import-module.wat: Added.
* JSTests/wasm/modules/reserved-import-module.wasm: Added.
* LayoutTests/imported/w3c/web-platform-tests/wasm/jsapi/esm-integration/reserved-import-names.tentative.any-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/wasm/jsapi/esm-integration/reserved-import-names.tentative.any.worker-expected.txt:

Canonical link: https://commits.webkit.org/320059@main