JSTests/wasm/modules/reserved-export-name-wasm-js.wat
@@ -1,0 +1,3 @@
+(module
+    (func (export "wasm-js:invalid") (result i32)
+        i32.const 42))
