JSTests/wasm/modules/reserved-export-name.wat
@@ -1,0 +1,3 @@
+(module
+    (func (export "wasm:invalid") (result i32)
+        i32.const 42))
