JSTests/wasm/modules/reserved-import-module.wat
@@ -1,0 +1,4 @@
+(module
+    (import "wasm-js:invalid" "test" (func $invalid (result i32)))
+    (func (export "test") (result i32)
+        call $invalid))
