JSTests/wasm/modules/reserved-import-name-wasm-js.wat
@@ -1,0 +1,4 @@
+(module
+    (import "test" "wasm-js:invalid" (func $invalid (result i32)))
+    (func (export "test") (result i32)
+        call $invalid))
