JSTests/wasm/modules/reserved-import-name.wat
@@ -1,0 +1,4 @@
+(module
+    (import "test" "wasm:invalid" (func $invalid (result i32)))
+    (func (export "test") (result i32)
+        call $invalid))
