JSTests/wasm/modules/wasm-colon-module.wat
@@ -1,0 +1,2 @@
+(module
+    (import "wasm:not-a-builtin" "x" (func)))
